<resources>
    <string name="app_name">Messages</string>
    <string name="error">Error: %s</string>
    <string name="attachment">Attachment</string>
    <string name="type_a_message">Type a message…</string>
    <string name="all">All</string>
    <string name="personal">Personal</string>
    <string name="otp">OTPs</string>
    <string name="offers">Offers</string>
    <string name="transaction">Transaction</string>
    <string name="unknown_error_occurred">An unknown error occurred</string>
    <string name="carrier_send_error">Couldn\'t send message, carrier error</string>
    <string name="error_service_is_unavailable">Couldn\'t send message, service unavailable</string>
    <string name="error_radio_turned_off">Couldn\'t send message, radio turned off</string>
    <string name="sim_card_not_available">SIM card not available</string>
    <string name="unknown_error_occurred_sending_message">Couldn\'t send message</string>
    <string name="empty_destination_address">Can\'t send message to an empty number</string>
    <string name="unable_to_save_message">Unable to save message to the telephony database</string>
    <string name="draft">draft</string>
    <string name="new_conversation">New Conversation</string>
    <string name="search_conversation">Search Conversation</string>
    <string name="title_compose">Type a name or number</string>
    <string name="channel_received_sms">SMS Channel</string>
    <string name="new_message">New message</string>
    <string name="mark_as_read">Mark as Read</string>
    <string name="mark_as_unread">Mark as Unread</string>
    <string name="me">Me</string>
    <string name="reply">Reply</string>
    <string name="you">You</string>
    <string name="invalid_short_code">Can\'t reply to short codes like this</string>
    <string name="edit">Edit</string>
    <string name="message">Message</string>
    <string name="call">Call</string>
    <string name="archive">Archive</string>
    <string name="delete_conversation">Delete conversation</string>
    <string name="block">Block</string>
    <string name="navigation_drawer_open">drawer open</string>
    <string name="navigation_drawer_close">drawer close</string>
    <string name="settings">Settings</string>
    <string name="no">no</string>
    <string name="yes">yes</string>
    <string name="proceed_with_deletion">Are you sure you want to delete this conversation?</string>
    <string name="deletion_confirmation">Are you sure you want to delete %s?</string>
    <string name="archive_confirmation">Are you sure you want to archive %s?</string>
    <string name="unArchive_confirmation">Are you sure you want to unarchive %s?</string>
    <string name="item_selected">selected</string>
    <string name="pin">Pin</string>
    <string name="delete">Delete</string>
    <string name="markasread">MarkAsRead</string>
    <string name="markasunread">MarkAsUnRead</string>
    <string name="unpin">UnPin</string>
    <string name="sending">Sending…</string>
    <string name="message_not_sent_touch_retry">Not sent.</string>
    <string name="message_not_sent_short">msg_send_fail</string>
    <string name="message_not_sent_title">Message not sent</string>
    <string name="message_sending_error">Your message to \'%s\' has not been sent</string>
    <string name="people">People</string>
    <string name="delete_msg">Delete Message?</string>
    <string name="archive_msg">Archive Message?</string>
    <string name="unArchive_msg">Unarchive Message?</string>
    <string name="choose_your_lan">Choose Your Languages</string>
    <string name="app_language">App Language</string>
    <string name="display">Display</string>
    <string name="show_profile_photos">Show Profile Photos</string>
    <string name="show_profile_photos_and_contacts_info_in_list_view">Show profile photos and contacts info in list view</string>
    <string name="notification_group">Notification Group</string>
    <string name="automatically_group_sms_notification_together">Automatically group SMS notification together</string>
    <string name="notifications">Notifications</string>
    <string name="show_messages">Show Messages</string>
    <string name="sub_msg_notification">Show messages in notification shade</string>
    <string name="feedback">Feedback</string>
    <string name="about_messages">About Messages</string>
    <string name="version">Version</string>
    <string name="rate_us">Rate us</string>
    <string name="share">Share with friends</string>
    <string name="feedback_or_suggestion">Feedback or suggestion</string>
    <string name="send">Send</string>
    <string name="feedback_toast">Please enter feedback</string>
    <string name="privacy_policy">Privcy policy</string>
    <string name="archives">Archived</string>
    <string name="unArchive">Unarchive</string>
    <string name="welcome_msg">Welcome to Messages</string>
    <string name="wlcm_sub_msg">A new way to say connected with friends</string>
    <string name="description" translatable="false">description</string>
    <string name="this_action_can_contain_ads">This action can contain ads</string>
    <string name="start_chat">Start Chat</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Okay</string>
    <string name="empty_msg">You can not send empty message</string>
    <string name="sel_lang">Please select language first</string>
    <string name="no_data">No data Found</string>
    <string name="app_theme">App Theme</string>
    <string name="light_theme">Light Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="default_theme">Default</string>
    <string name="choose_theme">Choose Theme</string>
    <string name="exit_app">Press back again to exit</string>
    <string name="loading_ads">Loading ads…</string>
    <string name="action_required">Action Required</string>
    <string name="please_turn_off_developer_options_and_try_again">Please turn off Developer Options and try again.</string>
    <string name="exit">Exit</string>
    <string name="turn_off">Turn OFF</string>
    <string name="retry">Retry</string>
    <string name="copy">Copy</string>
    <string name="value_copied_to_clipboard_show">Message copied to clipboard</string>
    <string name="copied_label" translatable="false">copied_label</string>
    <string name="unblock">Unblock</string>
    <string name="block_confirmation">Are you sure you want to block %s?</string>
    <string name="block_msg">Block Message?</string>
    <string name="blocked">Blocked</string>
    <string name="block_info_msg">To move this conversation out of \'Blocking\' and get messages again, unblock</string>
    <string name="block_list">Block List</string>
    <string name="scheduled">Scheduled</string>
    <string name="schedule_send">Schedule</string>
    <string name="schedule_sub_title"><![CDATA[To send keep phone on & connect to \nwi-fi or data]]></string>
    <string name="later_today">Later Today, 5:00 PM</string>
    <string name="later_tonight">Later tonight, 9:00 PM</string>
    <string name="tomorrow">Tomorrow, 8:00 AM</string>
    <string name="select_data_and_time">Select date and time</string>
    <string name="set_schedule_messages">Set Schedule Messages</string>
    <string name="future_selection">Please select future time</string>
    <string name="starred">Starred</string>
    <string name="backup_restore"><![CDATA[Backup & restore]]></string>
    <string name="swipe_actions">Swipe actions</string>
    <string name="private_box">Private Box</string>
    <string name="unread_messages">Unread Messages</string>
    <string name="more_options">More Options</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="schedule_option">Schedule options</string>
    <string name="send_now">Send now</string>
    <string name="backup_amp_restore_messages"><![CDATA[Backup & Restore Messages]]></string>
    <string name="backup_note">Messages can be backed up to your device and can be recovered any time</string>
    <string name="backup_note_msg"><![CDATA[Currently, only SMS is supported by backup & restore. MMS support & scheduled backup will be coming soon!]]></string>
    <string name="backup_now">Backup now</string>
    <string name="restore">Restore</string>
    <string name="backing_up_messages">Backing up messages</string>
    <string name="finished">Finished!</string>
    <string name="swipe_right">Swipe right</string>
    <string name="customize">Customize</string>
    <string name="swipe_left">Swipe left</string>
    <string name="none">None</string>
    <string name="synchronizing_messages">Synchronizing Messages</string>
    <string name="undo">Undo</string>
    <string name="restore_message">Restoring Message</string>
    <string name="select_destination">Select destination</string>
    <string name="restore_back_msg">Please wait until progress finished</string>
    <string name="set_default_app">Set default SMS app</string>
    <string name="messaging">Messaging</string>
    <string name="msg_perm">To Send or receive an SMS, you must set it as the default Application. Do you want the message to become your default application.</string>
    <plurals name="delete_conversations">
        <item quantity="one">%d conversation</item>
        <item quantity="other">%d conversations</item>
    </plurals>
    <plurals name="delete_messages">
        <item quantity="one">%d message</item>
        <item quantity="other">%d messages</item>
    </plurals>
    <string name="backup_notification_channel_name" translatable="false">Backup and restore</string>

</resources>