<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/jumpToDateLay"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:background="@drawable/ad_outline_shape"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_medium"
        android:text="@string/action_required"
        android:textColor="@color/ad_native_content_text"
        android:textFontWeight="600"
        android:textSize="@dimen/_16ssp" />

    <TextView
        android:id="@+id/tvValidatoinDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="@font/font_light"
        android:text="@string/please_turn_off_developer_options_and_try_again"
        android:textColor="@color/ad_native_content_text"
        android:textFontWeight="500"
        android:textSize="@dimen/_13ssp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/actionExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ad_outline_shape"
            android:fontFamily="@font/font_medium"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_5sdp"
            android:text="@string/exit"
            android:textColor="@color/ad_button_primary"
            android:textFontWeight="600"
            android:textSize="@dimen/_13ssp" />

        <TextView
            android:id="@+id/actionOpen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ad_outline_shape"
            android:fontFamily="@font/font_medium"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_5sdp"
            android:text="@string/turn_off"
            android:textColor="@color/ad_button_primary"
            android:textFontWeight="600"
            android:textSize="@dimen/_13ssp" />

        <TextView
            android:id="@+id/actionRetry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_medium"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_5sdp"
            android:text="@string/retry"
            android:textColor="@color/ad_button_primary"
            android:textFontWeight="600"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>
</LinearLayout>
